--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "typescript-tutorial-node",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start": "node ./build/index.js",
+    "start": "node ./build/server.js",
     "build": "tsc -p .",
-    "dev": "nodemon ./src/index.ts"
+    "dev": "nodemon ./src/server.ts"
   },
   "dependencies": {
+    "@shopify/shopify-api": "^7.1.0",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.25",
+    "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
