--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "typescript": "^5.0.4"
   },
   "devDependencies": {
-    "pre-commit": "^1.2.2"
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.0"
   },
   "repository": {
     "type": "git",
