--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,8 @@
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
-    "allowImportingTsExtensions": true,
-    "noEmit": true,
-    "skipLibCheck": true, /* Skip type checking of declaration files. */,
-    "forceConsistentCasingInFileNames": true, /* Disallow inconsistently-cased references to the same file. */
+    "skipLibCheck": true /* Skip type checking of declaration files. */,
+    "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
     }
